# gsplat

./: README.md  pyproject.toml
examples/: pyproject.toml
examples/datasets/: colmap.py
examples/datasets/pycolmap/: camera.py  database.py  scene_manager.py
