[project]
name = "examples"
version = "0.1.0"
description = "gsplat examples"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gsplat",
    "imageio[ffmpeg]>=2.37.2",
    "matplotlib>=3.10.8",
    "numpy<2.0.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "splines>=0.3.3",
    "tensorboard>=2.20.0",
    "tensorly>=0.9.0",
    "torchmetrics[image]>=1.8.2",
    "tqdm>=4.67.1",
    "tyro>=0.8.8",
    "viser>=1.0.16",
    "nerfview",
    "fused-ssim",
    "fused-bilagrid",
    "ppisp",
    "piexif>=1.1.3",
    "jaxtyping>=0.3.9",
]

[tool.uv.sources]
gsplat = { workspace = true }
nerfview = { git = "https://github.com/nerfstudio-project/nerfview", rev = "4538024fe0d15fd1a0e4d760f3695fc44ca72787" }
fused-ssim = { git = "https://github.com/rahul-goel/fused-ssim", rev = "328dc9836f513d00c4b5bc38fe30478b4435cbb5" }
fused-bilagrid = { git = "https://github.com/harry7557558/fused-bilagrid", rev = "90f9788e57d3545e3a033c1038bb9986549632fe" }
ppisp = { git = "https://github.com/nv-tlabs/ppisp", rev = "v1.0.0" }

[tool.uv.extra-build-dependencies]
gsplat = ["torch"]
